syntax = "proto3";

package grpcsigner;

option go_package = "github.com/tg123/remotesigner/grpcsigner";

service Signer {
  rpc Sign (SignRequest) returns (SignReply) {}
  rpc PublicKey (PublicKeyRequest) returns (PublicKeyReply) {}
}

message SignRequest {
  bytes digest = 1;
  string algorithm  = 2;
}

message SignReply {
  bytes signature = 1;
}

message PublicKeyRequest {
}

message PublicKeyReply {
  bytes  data = 1;
  string type = 2;
}